2003-03-19  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSMenu.h
	Removed method [_rightMouseDisplay:] as this is now private.
	* Source/NSMenu.m
	Implemented [popUpContextMenu:withEvent:forView:] using
	[_rightMouseDisplay:].
	* Source/NSApplication.m
	In [rightMouseDown:] use [popUpContextMenu:withEvent:forView:].
	* Source/NSMenu.m
	In [sendEvent:] use [popUpContextMenu:withEvent:forView:].

2003-03-19  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m
	In [imageUnfilteredFileTypes] add the tiff entries always to the
	front of the list. As the standard GNUstep images are in this
	format, this will speed up image loading.
	* Headers/gnustep/gui/NSCell.h
	Removed ivar is_continuous, this is now handled by the action
	mask. Decreased size of the image_position ivar. Added two more
	subclass ivar to reuse the freed space. Flagged all methods that
	are new in MacOSX and added a few more of this.
	* Source/NSCell.m 
	Added new MacOSX methods [title], [setTitle:], [controlSize],
	[setControlSize:], [controlTint], [setControlTint:] and
	[highlightColorWithFrame:inView:]. Rewrote [isContinuous], 
	[setContinuous:] and [trackMouse:...untilMouseUp:] to work via the
	_action_mask. 

2003-03-18  Serg Stoyan <stoyan@on.com.ua>

	* Source/NSMenuView.m 
	([NSMenuTitleView titleSize]): Added.
	([NSMenuTitleView drawRect:]): Switch to using titleSize:. Declaration 
	of attr variable moved to class declaration.
	([NSMenuTitleView init]): Added to initialize attr variable.
	(sizeToFit): Count missed state image offset. Do not add padding when 
	there's no key equivalent. Handle situations when tile view wider than 
	menu items, when there's no menu items and so on. (Side efect: menu of 
	application in Gorm resizes correctly while changing title, adding
	shorcut etc.). Using [NSMenuTitleView titleSize] now for correct 
	determination	of menu title's text width.

2003-03-17  Serg Stoyan <stoyan@on.com.ua>

	* Source/NSMenuView.m 